@@ -24,7 +24,10 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.stream.Collectors;
@@ -84,6 +87,7 @@ public class TestExecutor {
 
 		List<URL> testPackagesUrls = getTestPackagesUrls();
 		Set<Method> testNGTests = findTestMethods(testPackagesUrls);
+		frameworkLogger.info("Total test methods found: {}", testNGTests.size());
 		Map<String, List<Method>> methods = createTestsMap(testNGTests);
 
 		ExecutorService executor = Executors.newCachedThreadPool();
@@ -117,8 +121,10 @@ public class TestExecutor {
 		String testClassPackagePath = "file:" + TARGET_PATH + File.separator + "test-classes" + File.separator;
 
 		for (String packageName : packageList) {
-			URL testPackagesUrl = new URL(testClassPackagePath + packageName.replaceAll("\\.", "/"));
-			testPackagesUrls.add(testPackagesUrl);
+			// Construct the URI
+			URI testPackagesUri = new URI(testClassPackagePath + packageName.replaceAll("\\.", "/"));
+			frameworkLogger.info("Test package URL: {}", testPackagesUri.toURL());
+			testPackagesUrls.add(testPackagesUri.toURL());
 		}
 		return testPackagesUrls;
 	}
